<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:src="@drawable/lock" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/lock_app_lock"
            android:textColor="#AAAAAA"
            android:textSize="23sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/cb_turn_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:text="@string/lock_turn_on_app_lock"
            android:textColor="#AAAAAA" />

        <CheckBox
            android:id="@+id/cb_turn_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lock_auto_turn_on_once_boot"
            android:textColor="#AAAAAA" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <!-- this linearlayout is showed when loading -->

        <LinearLayout
            android:id="@+id/ll_lock_load"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#AAAAAA"
                android:text="@string/lock_loading_app_information_" />
        </LinearLayout>

        <ListView
            android:id="@+id/lv_lock"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fastScrollEnabled="true"
            android:visibility="invisible" >
        </ListView>
    </RelativeLayout>

</LinearLayout>